--- a/report/clinical/bibliography.bib
+++ b/report/clinical/bibliography.bib
@@ -9,6 +9,17 @@
   publisher={Elsevier}
 }
 
+@article{tomer2019personalized,
+  title={Personalized Decision Making for Biopsies in Prostate Cancer Active Surveillance Programs},
+  author={Tomer, Anirudh and Rizopoulos, Dimitris and Nieboer, Daan and Drost, Frank-Jan and Roobol, Monique J and Steyerberg, Ewout W},
+  journal={Medical Decision Making},
+  volume={39},
+  number={5},
+  pages={499--508},
+  year={2019},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
 @article{bruinsma2017expert,
   title={Expert consensus document: semantics in active surveillance for men with localized prostate cancer—results of a modified Delphi consensus procedure},
   author={Bruinsma, Sophie M and Roobol, Monique J and Carroll, Peter R and Klotz, Laurence and Pickles, Tom and Moore, Caroline M and Gnanapragasam, Vincent J and Villers, Arnauld and Rannikko, Antti and Valdagni, Riccardo and others},
@@ -322,6 +333,17 @@ publisher={Institute of Mathematical Statistics}
   pages={106--115},
   year={2018},
   publisher={AME Publications}
+}
+
+@article{cooperberg2018refined,
+  title={Refined analysis of prostate-specific antigen kinetics to predict prostate cancer active surveillance outcomes},
+  author={Cooperberg, Matthew R and Brooks, James D and Faino, Anna V and Newcomb, Lisa F and Kearns, James T and Carroll, Peter R and Dash, Atreya and Etzioni, Ruth and Fabrizio, Michael D and Gleave, Martin E and others},
+  journal={European urology},
+  volume={74},
+  number={2},
+  pages={211--217},
+  year={2018},
+  publisher={Elsevier}
 }
 
 @article{inoue2018comparative,
