--- a/report/clinical/mainmatter/result.tex
+++ b/report/clinical/mainmatter/result.tex
@@ -4,7 +4,7 @@ The cause-specific cumulative upgrading-risk at year five of follow-up was 35\% 
 
 In the joint model fitted to the PRIAS dataset, the adjusted hazard ratio of upgrading for an increase in patient age from 61 to 71 years (25-th to 75-th percentile) was 1.45~(95\%CI:~1.30--1.63). For an increase in fitted PSA value (log scale) from 2.36 to 3.07 (25-th to 75-th percentile), the adjusted hazard ratio was 0.99~(95\%CI:~0.89--1.11). In contrast to PSA value, instantaneous PSA velocity was a stronger predictor of upgrading-risk, because an increase in velocity from -0.09 to 0.31 (25-th to 75-th percentile) had a hazard ratio of 2.47~(95\%CI:~1.93--2.99). The impact of PSA value and velocity on upgrading-risk varied between cohorts (Table~6, Supplementary~A.2). Detailed results are in Supplementary~A.2.
 
-The follow-up time-dependent mean absolute risk prediction error; time-dependent AUC; and calibration plot of our model in different validation cohorts are shown in Panel~B, Figure~8, Supplementary~B; Panel~A, Figure~\ref{fig:auc_beforecalib}; and Panel~B, Figure~\ref{fig:auc_beforecalib}, respectively. In all cohorts, AUC was moderate (0.55 to 0.75). Mean absolute prediction error was large (0.3 to 0.45) in those cohorts where the impact of PSA value and velocity on upgrading-risk was different from PRIAS (e.g., MUSIC cohort, Table~6, Supplementary~A.2), and moderate (0.1 to 0.3) otherwise. To resolve issues in calibration-at-large (Panel~B, Figure~\ref{fig:auc_beforecalib}), we recalibrated the baseline hazard of upgrading in all cohorts (Figure~6, Supplementary~B). We compared risk predictions from the recalibrated models with predictions from separately fitted joint models to each cohort (Figure~7, Supplementary~B). The difference in predictions was lowest in Johns Hopkins cohort (impact of PSA similar to PRIAS, Table~5, Supplementary~A.2). Comprehensive validation results are in Supplementary~B.
+The time-dependent MAPE; time-dependent AUC; and calibration plot of our model in different validation cohorts are shown in Panel~B, Figure~8, Supplementary~B; Panel~A, Figure~\ref{fig:auc_beforecalib}; and Panel~B, Figure~\ref{fig:auc_beforecalib}, respectively. In all cohorts, time-dependent AUC was moderate (0.55 to 0.75) over the whole follow-up period. Time-dependent MAPE was large (0.3 to 0.45) in those cohorts where the impact of PSA value and velocity on upgrading-risk was different from PRIAS (e.g., MUSIC cohort, Table~6, Supplementary~A.2), and moderate (0.1 to 0.3) otherwise. In all cohorts the MAPE decreased rapidly after year one of follow-up. To resolve issues in calibration-at-large (Panel~B, Figure~\ref{fig:auc_beforecalib}), we recalibrated the baseline hazard of upgrading in all cohorts (Figure~6, Supplementary~B). We compared risk predictions from the recalibrated models with predictions from separately fitted joint models to each cohort (Figure~7, Supplementary~B). The difference in predictions was lowest in Johns Hopkins cohort (impact of PSA similar to PRIAS, Table~5, Supplementary~A.2). Comprehensive validation results are in Supplementary~B.
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/auc_beforecalib.eps}}
@@ -17,7 +17,8 @@ We utilized the fitted joint model to create upgrading-risk based personalized b
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/demo_pat1.eps}}
-\caption{\textbf{Illustration of personalized and fixed schedules of biopsies}. Due to a lack of space, the PSA profile of this patient is shown in Figure~\ref{fig:jmExplanationPlot_113}. \textbf{Panel~A:} Predicted cumulative upgrading-risk (95\% credible interval shaded). \textbf{Panel~B:} Personalized and fixed schedules of biopsies, with a red `B' indicating a scheduled biopsy. The green vertical line at year 1 denotes the time of the latest negative biopsy. Black dashed line at year 3 denotes the time of the current visit. \textbf{Panel~C:}\ Expected time delay in detecting upgrading (months) for different schedules. A compulsory biopsy was scheduled at year six (maximum biopsy scheduling time in PRIAS, Supplementary~C) in all schedules for a meaningful comparison between them.}
+\caption{\textbf{Illustration of personalized and fixed schedules of biopsies}. Due to a lack of space, the PSA profile of this patient is shown in Figure~\ref{fig:jmExplanationPlot_113}. \textbf{Panel~A:} Predicted cumulative upgrading-risk (95\% cred
+ible interval shaded). \textbf{Panel~B:} Personalized and fixed schedules of biopsies, with a red `B' indicating a scheduled biopsy. The green vertical line at year 1 denotes the time of the latest negative biopsy. Black dashed line at year 3 denotes the time of the current visit. \textbf{Panel~C:}\ Expected time delay in detecting upgrading (months) for different schedules. A compulsory biopsy was scheduled at year six (maximum biopsy scheduling time in PRIAS, Supplementary~C) in all schedules for a meaningful comparison between them.}
 \label{fig:demo_pat1}
 \end{figure}
 
