--- a/report/lastpaper/bibliography.bib
+++ b/report/lastpaper/bibliography.bib
@@ -6,6 +6,15 @@
   publisher={Wiley Online Library}
 }
 
+@article{mcculloch2005generalized,
+  title={Generalized linear mixed models},
+  author={McCulloch, Charles E and Neuhaus, John M},
+  journal={Encyclopedia of biostatistics},
+  volume={4},
+  year={2005},
+  publisher={Wiley Online Library}
+}
+
 @article{alwan2010monitoring,
   title={Monitoring and surveillance of chronic non-communicable diseases: progress and capacity in high-burden countries},
   author={Alwan, Ala and MacLean, David R and Riley, Leanne M and d'Espaignet, Edouard Tursan and Mathers, Colin Douglas and Stevens, Gretchen Anna and Bettcher, Douglas},
