--- a/report/lastpaper/supplementary.tex
+++ b/report/lastpaper/supplementary.tex
@@ -66,6 +66,8 @@
 \input{supplementary/prias_param_estimates}
 \clearpage
 \input{supplementary/extra_examples}
+\clearpage
+\input{supplementary/sim_study_full_res}
 %\clearpage
 %\input{supplementary/source_code}
 \clearpage
